--- a/reports/mono-2.0/HPLT-v2-mar_Deva.yaml
+++ b/reports/mono-2.0/HPLT-v2-mar_Deva.yaml
@@ -252,8 +252,7 @@ docs_wds: '[[5, 10822], [5.1, 11053], [5.2, 11452], [5.3, 11738], [5.4, 13451], 
   [9.1, 60893], [9.2, 46213], [9.3, 34004], [9.4, 28467], [9.5, 20914], [9.6, 18365],
   [9.7, 14163], [9.8, 10026], [9.9, 4743], [10, 1122]]'
 corpus: mar_Deva.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 4745018, "no_urls": 252562,
-  "no_bad_encoding": 343, "pii": 42073}'
+hardrules_tags: '{"not_too_long": 565356, "not_too_short": 4745669, "no_urls": 268497, "no_bad_encoding": 434,  "pii": 42073}'
 sentence_pairs: 36315277
 src_bytes: 16.02 GB
 src_chars: 6587873834
