Updated reports for Maltese

--- a/reports/mono-1.2/HPLT-v1.2-mt.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-mt.yaml
@@ -220,8 +220,7 @@ docs_wds: '[[0.0, 729], [0.1, 90], [0.2, 258], [0.3, 446], [0.4, 1109], [0.5, 46
   833], [8.2, 857], [8.3, 777], [8.4, 672], [8.5, 557], [8.6, 507], [8.7, 521], [8.8,
   440], [8.9, 421], [9.0, 400], [9.1, 316], [9.2, 265], [9.3, 221], [9.4, 185], [9.5,
   137], [9.6, 111], [9.7, 84], [9.8, 47], [9.9, 10], [10.0, 1]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 4064062, "no_urls": 141912,
-  "no_bad_encoding": 2234}'
+hardrules_tags: '{"not_too_long": 48211, "not_too_short": 4063555, "no_urls": 142130, "no_bad_encoding": 1780}'  
 monocleaner_scores: '[[0.0, 391883], [0.1, 386965], [0.2, 497874], [0.3, 1444947],
   [0.4, 1730482], [0.5, 1957069], [0.6, 1528275], [0.7, 1328464], [0.8, 1311680],
   [0.9, 596578]]'
