--- a/reports/mono-2.0/HPLT-v2-mlt_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-mlt_Latn.yaml
@@ -195,8 +195,7 @@ docs_wds: '[[5, 2393], [5.1, 2343], [5.2, 2472], [5.3, 2579], [5.4, 2690], [5.5,
   [9.4, 14577], [9.5, 14259], [9.6, 13880], [9.7, 13469], [9.8, 12113], [9.9, 7023],
   [10, 1845]]'
 corpus: mlt_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 1062782, "no_urls": 123217,
-  "no_bad_encoding": 488, "pii": 46448}'
+hardrules_tags: '{"not_too_long": 94236, "not_too_short": 1331628, "no_urls": 126089, "no_bad_encoding": 677,  "pii": 46448}'
 sentence_pairs: 8675475
 src_bytes: 1.39 GB
 src_chars: 1433340040
