--- a/reports/mono-2.0/HPLT-v2-sag_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-sag_Latn.yaml
@@ -60,8 +60,7 @@ docs_wds: '[[5, 19], [5.1, 25], [5.2, 27], [5.3, 22], [5.4, 29], [5.5, 29], [5.6
   [8.6, 182], [8.7, 149], [8.8, 139], [8.9, 158], [9, 186], [9.1, 160], [9.2, 45],
   [9.3, 33], [9.4, 38], [9.5, 32], [9.6, 18], [9.7, 15], [9.8, 2]]'
 corpus: sag_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 4132, "no_urls": 146, "no_bad_encoding":
-  1417, "pii": 3}'
+hardrules_tags: '{"not_too_long": 1700, "not_too_short": 4154, "no_urls": 171, "no_bad_encoding": 1417,   "pii": 3}'
 sentence_pairs: 51900
 src_bytes: 16.56 MB
 src_chars: 16692086
