--- a/reports/mono-2.0/HPLT-v2-mri_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-mri_Latn.yaml
@@ -65,7 +65,7 @@ docs_segments: '[[1, 3013], [2, 2158], [3, 3202], [4, 4318], [5, 5478], [6, 4988
   1], [1923, 1], [2261, 1], [2461, 4], [3020, 1], [4102, 1], [5520, 1]]'
 docs_segments_mean: 26
 docs_segments_median: 16
-docs_timestamp: 1730906055.164894
+docs_timestamp: 1733475123.6185734
 docs_top100_domains: '[["wondershare.com", 5901], ["maoritelevision.com", 5811], ["jw.org",
   3905], ["teaomaori.news", 3315], ["vessoft.com", 2869], ["teara.govt.nz", 2431],
   ["bibliaonline.com.br", 2047], ["wikipedia.org", 1913], ["biblegateway.com", 1907],
@@ -125,8 +125,8 @@ docs_wds: '[[5, 2430], [5.1, 2220], [5.2, 1847], [5.3, 1747], [5.4, 1672], [5.5,
   1968], [8.9, 1893], [9, 2487], [9.1, 1686], [9.2, 1174], [9.3, 937], [9.4, 825],
   [9.5, 712], [9.6, 789], [9.7, 531], [9.8, 274], [9.9, 159], [10, 51]]'
 corpus: mri_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 165048, "no_urls": 17683, "no_bad_encoding":
-  315, "pii": 4111}'
+hardrules_tags: '{"not_too_long": 20126, "not_too_short": 348326, "no_urls": 30384,
+  "no_bad_encoding": 488, "pii": 4111}'
 sentence_pairs: 2795092
 src_bytes: 410.55 MB
 src_chars: 421607601
@@ -632,9 +632,17 @@ src_unique_sents: '[[0, 1], [1, 12742], [2, 38075], [3, 48314], [4, 51665], [5, 
   1], [7433, 1], [7439, 1], [7931, 1], [9275, 1], [14805, 1], [19249, 1], [53781,
   1], [87629, 1], [97730, 1]]'
 srclang: mi
-timestamp: 1730907840.5455496
+timestamp: 1733477037.048774
 unique_sents: 1562664
 warnings:
 - src_warning_tok_nltk_wordpunct
 - src_fasttext
-- src_ngrams_mi_nostopwords
+src_ngrams: '{"1": [[["te"], 8145406], [["o"], 2387942], [["ki"], 2297521], [["me"],
+  1405939], [["nga"], 1371395]], "2": [[["ki te"], 1230834], [["o te"], 855505], [["me
+  te"], 627626], [["o nga"], 203162], [["mo te"], 186438]], "3": [[["roto i te"],
+  271499], [["runga i te"], 104961], [["roto i nga"], 39979], [["ki a koutou"], 30861],
+  [["te nuinga o"], 28606]], "4": [[["taea e koe te"], 52702], [["te whakamahi i te"],
+  22339], [["neke atu i te"], 13933], [["hiahia ana koe ki"], 13924], [["p\u0101 ana
+  ki te"], 13033]], "5": [[["hiahia ana koe ki te"], 13524], [["te hiahia koe ki te"],
+  7443], [["te p\u016bmanawa e \u0101hei ki"], 7057], [["ki te hiahia koe ki"], 5348],
+  [["taea e koe te whakamahi"], 4665]]}'
