Updated reports for Belarusian

--- a/reports/mono-1.2/HPLT-v1.2-be.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-be.yaml
@@ -285,8 +285,7 @@ docs_wds: '[[0.0, 7034], [0.1, 368], [0.2, 263], [0.3, 213], [0.4, 1242], [0.5, 
   6604], [8.6, 6253], [8.7, 6100], [8.8, 5471], [8.9, 5324], [9.0, 4963], [9.1, 4288],
   [9.2, 3817], [9.3, 3069], [9.4, 2451], [9.5, 1807], [9.6, 1217], [9.7, 772], [9.8,
   429], [9.9, 160], [10.0, 19]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 15959291, "no_urls": 627270,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 156320, "not_too_short": 15959544, "no_urls": 625972, "no_bad_encoding": 177}'
 monocleaner_scores: '[[0.0, 3025833], [0.1, 681346], [0.2, 893353], [0.3, 1549929],
   [0.4, 2159758], [0.5, 3011788], [0.6, 4095304], [0.7, 6438739], [0.8, 9331513],
   [0.9, 6828853]]'
