Updated reports for Galician

--- a/reports/mono-1.2/HPLT-v1.2-gl.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-gl.yaml
@@ -360,8 +360,7 @@ docs_wds: '[[0.0, 41774], [0.1, 3524], [0.2, 4115], [0.3, 4199], [0.4, 4529], [0
   9952], [8.2, 8415], [8.3, 7354], [8.4, 6343], [8.5, 5559], [8.6, 4745], [8.7, 4469],
   [8.8, 4143], [8.9, 3799], [9.0, 3252], [9.1, 2814], [9.2, 2370], [9.3, 1973], [9.4,
   1557], [9.5, 1189], [9.6, 842], [9.7, 532], [9.8, 225], [9.9, 143], [10.0, 19]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 34756034, "no_urls": 1371704,
-  "no_bad_encoding": 9268}'
+hardrules_tags: '{"not_too_long": 235910, "not_too_short": 34753901, "no_urls": 1373908, "no_bad_encoding": 5091}'
 monocleaner_scores: '[[0.0, 8006187], [0.1, 3880644], [0.2, 4823832], [0.3, 6835613],
   [0.4, 9144992], [0.5, 11640332], [0.6, 15847345], [0.7, 15405417], [0.8, 13659136],
   [0.9, 3439261]]'
