--- a/reports/mono-2.0/HPLT-v2-glg_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-glg_Latn.yaml
@@ -253,8 +253,7 @@ docs_wds: '[[5, 25590], [5.1, 25599], [5.2, 26868], [5.3, 27081], [5.4, 30982], 
   [9.1, 41121], [9.2, 32701], [9.3, 25548], [9.4, 20869], [9.5, 16913], [9.6, 14140],
   [9.7, 9052], [9.8, 5127], [9.9, 1829], [10, 470]]'
 corpus: glg_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 5139086, "no_urls": 912253,
-  "no_bad_encoding": 29423, "pii": 191343}'
+hardrules_tags: '{"not_too_long": 570263, "not_too_short": 6732725, "no_urls": 915618, "no_bad_encoding": 30608,   "pii": 191343}'
 sentence_pairs: 61177888
 src_bytes: 9.6 GB
 src_chars: 10050502462
