--- a/reports/mono-2.0/HPLT-v2-khm_Khmr.yaml
+++ b/reports/mono-2.0/HPLT-v2-khm_Khmr.yaml
@@ -152,8 +152,7 @@ docs_wds: '[[5, 30337], [5.1, 31731], [5.2, 27683], [5.3, 25202], [5.4, 25460], 
   [9.2, 2332], [9.3, 1818], [9.4, 1607], [9.5, 1350], [9.6, 1255], [9.7, 976], [9.8,
   653], [9.9, 263], [10, 130]]'
 corpus: khm_Khmr.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 1530037, "no_urls": 112453,
-  "no_bad_encoding": 176, "pii": 20195}'
+hardrules_tags: '{"not_too_long": 151930, "not_too_short": 1788124, "no_urls": 116238, "no_bad_encoding": 180, "pii": 20195}'
 sentence_pairs: 9864172
 src_bytes: 5.48 GB
 src_chars: 2113232593
