--- a/reports/mono-2.0/HPLT-v2-lao_Laoo.yaml
+++ b/reports/mono-2.0/HPLT-v2-lao_Laoo.yaml
@@ -82,8 +82,7 @@ docs_wds: '[[5, 4702], [5.1, 4378], [5.2, 3983], [5.3, 3391], [5.4, 2700], [5.5,
   [6.3, 233], [6.4, 131], [6.5, 101], [6.6, 80], [6.7, 24], [6.8, 17], [6.9, 10],
   [7, 12], [7.1, 10], [7.2, 2], [7.4, 2], [7.5, 2], [7.7, 1], [7.8, 1], [8, 1]]'
 corpus: lao_Laoo.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 61553, "no_urls": 1698, "no_bad_encoding":
-  26, "pii": 267}'
+hardrules_tags: '{"not_too_long": 10065, "not_too_short": 61554, "no_urls": 2085, "no_bad_encoding": 45 , "pii": 267}'
 sentence_pairs: 319953
 src_bytes: 221.5 MB
 src_chars: 84390143
