Updated reports for Umbundu

--- a/reports/mono-2.0/HPLT-v2-umb_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-umb_Latn.yaml
@@ -45,8 +45,7 @@ docs_wds: '[[5, 37], [5.1, 33], [5.2, 30], [5.3, 45], [5.4, 57], [5.5, 31], [5.6
   68], [8.7, 34], [8.8, 28], [8.9, 43], [9, 29], [9.1, 34], [9.2, 15], [9.3, 20],
   [9.4, 16], [9.5, 13], [9.6, 10], [9.7, 5], [9.8, 2]]'
 corpus: umb_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 2996, "no_urls": 137, "no_bad_encoding":
-  187, "pii": 31}'
+hardrules_tags: '{"not_too_long": 789, "not_too_short": 3946, "no_urls": 172, "no_bad_encoding": 187, "pii": 31}'
 sentence_pairs: 59912
 src_bytes: 14.8 MB
 src_chars: 15348339
