--- a/reports/mono-2.0/HPLT-v2-nso_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-nso_Latn.yaml
@@ -73,8 +73,7 @@ docs_wds: '[[5, 38], [5.1, 48], [5.2, 26], [5.3, 31], [5.4, 38], [5.5, 27], [5.6
   160], [9.3, 132], [9.4, 154], [9.5, 145], [9.6, 124], [9.7, 87], [9.8, 32], [9.9,
   10], [10, 2]]'
 corpus: nso_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 1569, "not_too_short": 12336, "no_urls": 841, "no_bad_encoding":
-  11, "pii": 46}'
+hardrules_tags: '{"not_too_long": 1569, "not_too_short": 12336, "no_urls": 841, "no_bad_encoding": 11,   "pii": 46}'
 sentence_pairs: 143306
 src_bytes: 26.86 MB
 src_chars: 27357543
