--- a/reports/mono-2.0/HPLT-v2-por_Latn.lite.yaml
+++ b/reports/mono-2.0/HPLT-v2-por_Latn.lite.yaml
@@ -908,8 +908,7 @@ docs_wds: '[[5, 2042880], [5.1, 2047837], [5.2, 2117288], [5.3, 2165650], [5.4, 
   [9.2, 3634742], [9.3, 3125794], [9.4, 2819043], [9.5, 2627301], [9.6, 2435035],
   [9.7, 1727041], [9.8, 1034835], [9.9, 423364], [10, 116353]]'
 corpus: HPLT-v2-por_Latn.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 667668721, "no_urls": 112107447,
-  "no_bad_encoding": 0, "pii": 29141399}'
+hardrules_tags: '{"not_too_long": 49056484, "not_too_short": 903332371, "no_urls": 113403241, "no_bad_encoding": 0,  "pii": 29141399}'
 sentence_pairs: 6124583396
 src_bytes: 855.25 GB
 src_chars: 890659363336
