--- a/reports/mono-1.2/HPLT-v1.2-pt.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-pt.lite.yaml
@@ -1140,3 +1140,4 @@ srclang: pt
 timestamp: 1719963759.1898513
 unique_sents: 0
 warnings: []
+hardrules_tags: '{"not_too_long": 21161217, "not_too_short": 2828926124, "no_urls": 140869403, "no_bad_encoding": 0}'
