--- a/reports/mono-1.2/HPLT-v1.2-ta.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-ta.lite.yaml
@@ -3474,3 +3474,4 @@ srclang: ta
 timestamp: 1717884621.6516325
 unique_sents: 45210902
 warnings: []
+hardrules_tags: '{"not_too_long": 747377, "not_too_short": 68738599, "no_urls": 2658868, "no_bad_encoding": 3379}'
